# ptmud-ng

./: .gitignore  CMakeLists.txt  README.md  design.md  mechanics.md
cmake/: boost.cmake  build-flags-clang-gcc.cmake  build-flags.cmake  rs_add_library.cmake  stdc++fs.cmake
src/: CMakeLists.txt  config.cpp  config.h  ptmud-ng.cpp  ptmud-ng.h
src/host/: CMakeLists.txt
src/host/posix/: CMakeLists.txt  main.cpp
